--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
+    "leva": "^0.9.34",
     "next-transpile-modules": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
